Add simple RAG implementation using langchain and other tools

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py39, lint, test, format
+envlist = py39, lint, test, format, security
 skipsdist = True
 skip_missing_interpreters = True
 
@@ -18,9 +18,25 @@ deps =
     black
     autopep8
 commands =
+    # Format code with autopep8 and black
     autopep8 --in-place --aggressive --recursive src/ tests/
+    black --check src/ tests/ 
+    # Check for linting errors with flake8
     flake8 src/ tests/
-    black --check src/ tests/
+
+[testenv:format]
+description = Format code with black
+deps = black
+commands =
+    # Format code with black and check for errors
+    black src/ tests/
+
+[testenv:security]
+description = Run security checks
+deps =
+    safety
+commands =
+    safety scan
 
 [testenv:type]
 description = Run type checks with mypy
