improve tox init

--- a/tox.ini
+++ b/tox.ini
@@ -16,20 +16,23 @@ description = Run linters
 deps =
     flake8
     black
-    autopep8
 commands =
-    # Format code with autopep8 and black
-    autopep8 --in-place --aggressive --recursive src/ tests/
+    # check black format
     black --check src/ tests/ 
     # Check for linting errors with flake8
     flake8 src/ tests/
 
 [testenv:format]
 description = Format code with black
-deps = black
+deps = 
+    black
+    autoflake
+    isort
 commands =
     # Format code with black and check for errors
-    black src/ tests/
+    autoflake -i -r --remove-all-unused-imports --remove-unused-variables --remove-duplicate-keys src tests
+    isort --use-parentheses --trailing-comma src tests
+    black src tests
 
 [testenv:security]
 description = Run security checks
