--- a/tox.ini
+++ b/tox.ini
@@ -43,5 +43,7 @@ commands =
 
 [testenv:type]
 description = Run type checks with mypy
-deps = mypy
+deps = 
+    mypy
+    -rrequirements.txt
 commands = mypy src/
