--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
-langchain-ollama
-langchain-groq
-langchain-community
-langchain-chroma
-langchain
-ollama
-chromadb
+langchain-ollama==0.2.2
+langchain-groq==0.2.2
+langchain-community==0.3.13
+langchain-chroma==0.1.4
+langchain==0.3.13
+ollama==0.4.4
+chromadb==0.5.23
 # OCR
-pdf2image
-Pillow
-easyocr
-PyMuPDF
+pdf2image==1.17.0
+Pillow==10.4.0
+easyocr==1.7.2
+PyMuPDF==1.25.1
 tqdm
-keybert
-gradio
+keybert==0.8.5
+gradio==4.44.1
