--- a/tox.ini
+++ b/tox.ini
@@ -6,13 +6,14 @@ skip_missing_interpreters = True
 [testenv]
 deps = 
     pytest
-    black
-    -rrequirements.txt
+    poetry
 commands =
+    poetry install
     pytest --cov=src tests/
 
 [testenv:lint]
 description = Run linters
+skip_install = true
 deps =
     flake8
     black
@@ -24,6 +25,7 @@ commands =
 
 [testenv:format]
 description = Format code with black
+skip_install = true
 deps = 
     black
     autoflake
@@ -36,6 +38,7 @@ commands =
 
 [testenv:security]
 description = Run security checks
+skip_install = true
 deps =
     safety
 commands =
@@ -43,7 +46,7 @@ commands =
 
 [testenv:type]
 description = Run type checks with mypy
+skip_install = true
 deps = 
     mypy
-    -rrequirements.txt
 commands = mypy src/
