--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 langchain-ollama==0.2.2
-langchain-groq==0.2.2
+langchain-groq==0.2.3
 langchain-community==0.3.14
 langchain-chroma==0.1.4
 langchain-huggingface
@@ -15,3 +15,5 @@ tqdm==4.67.1
 keybert==0.8.5
 gradio==5.9.1
 rank_bm25==0.2.2
+groq==0.15.0
+gdown
